Fixed wizard navigation on tablet view

--- a/web/public/ui/css/bootstrap/_carousel.scss
+++ b/web/public/ui/css/bootstrap/_carousel.scss
@@ -263,9 +263,4 @@
     right: 20%;
     padding-bottom: 30px;
   }
-
-  // Move up the indicators
-  .carousel-indicators {
-    bottom: 20px;
-  }
 }
